--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
-<!--  <app-generations></app-generations>-->
-  <app-pokemons></app-pokemons>
+  <app-generations></app-generations>
+<!--  <app-pokemons></app-pokemons>-->
 </div>
